added replicas to es

--- a/artifacts/devnet/config.json
+++ b/artifacts/devnet/config.json
@@ -16,10 +16,12 @@
   "gcp-machine-cpu": 16,
   "gcp-machine-memory": 64,
   "genesis-delay": 10,
-  "es-disk-size": "2048",
-  "es-memory": "32",
+  "es-disk-size": "1024",
+  "es-memory": "16",
   "es-heap-memory": "4",
-  "es-cpu": "8",
+  "es-cpu": "4",
+  "es-replicas": "3",
+  "es-master-nodes": "2",
   "logs-expiry": "7",
   "deploy-pyroscope": true,
   "pyroscope-cpu": "2",
