--- a/artifacts/varpost/config.json
+++ b/artifacts/varpost/config.json
@@ -16,10 +16,12 @@
   "gcp-machine-cpu": 16,
   "gcp-machine-memory": 64,
   "genesis-delay": 10,
-  "es-disk-size": "2048",
+  "es-disk-size": "1024",
   "es-memory": "16",
-  "es-heap-memory": "8",
+  "es-heap-memory": "4",
   "es-cpu": "4",
+  "es-replicas": "3",
+  "es-master-nodes": "2",
   "logs-expiry": "7",
   "old-api-exists": false,
   "adjust-hare": false
