--- a/artifacts/devnet/config.json
+++ b/artifacts/devnet/config.json
@@ -25,5 +25,10 @@
   "logs-expiry": "7",
   "deploy-pyroscope": true,
   "pyroscope-cpu": "2",
-  "pyroscope-memory": "8"
+  "pyroscope-memory": "8",
+  "metrics": true,
+  "go-sm-image": "spacemeshos/go-spacemesh:develop",
+  "poet-image": "spacemeshos/poet:develop",
+  "old-api-exists": false,
+  "adjust-hare": false
 }
