--- a/artifacts/devnet/miner/config.json
+++ b/artifacts/devnet/miner/config.json
@@ -7,13 +7,13 @@
     "eligibility-epoch-offset": "0"
   },
   "hare": {
-    "hare-exp-leaders": "5",
+    "hare-exp-leaders": "10",
     "hare-limit-concurrent": "5",
     "hare-limit-iterations": "10",
     "hare-round-duration-sec": "30", 
     "hare-wakeup-delta": "30",
-    "hare-committee-size": "6",
-    "hare-max-adversaries": "2"
+    "hare-committee-size": "800",
+    "hare-max-adversaries": "399"
   },
   "logging": {
     "app": "info",
@@ -40,6 +40,8 @@
     "trtl": "info"
   },
   "main": {
+    "space-to-commit": 1048576,
+    "genesis-total-weight": 52428800,
     "layer-duration-sec": 200,
     "layer-average-size": 30,
     "layers-per-epoch": 6,
