--- a/artifacts/devnet/miner/config.json
+++ b/artifacts/devnet/miner/config.json
@@ -50,8 +50,7 @@
     "sync-interval": 10,
     "sync-validation-delta": 30,
     "hdist": 10,
-    "atxs-per-block": 25,
-    "gc-trace": true
+    "atxs-per-block": 25
   },
   "p2p": {
     "dial-timeout": "1m",
