--- a/artifacts/devnet/config.json
+++ b/artifacts/devnet/config.json
@@ -27,7 +27,7 @@
   "pyroscope-cpu": "2",
   "pyroscope-memory": "8",
   "metrics": true,
-  "go-sm-image": "spacemeshos/go-spacemesh-dev:tortoise-ticker",
+  "go-sm-image": "spacemeshos/go-spacemesh:develop",
   "poet-image": "spacemeshos/poet:develop",
   "old-api-exists": false,
   "adjust-hare": false,
