--- a/artifacts/devnet/miner/config.json
+++ b/artifacts/devnet/miner/config.json
@@ -41,7 +41,6 @@
   },
   "main": {
     "space-to-commit": 1048576,
-    "genesis-total-weight": 52428800,
     "layer-duration-sec": 200,
     "layer-average-size": 30,
     "layers-per-epoch": 6,
@@ -80,5 +79,18 @@
     "ntp-queries": 5,
     "default-timeout-latency": "10s",
     "refresh-ntp-interval": "30m"
+  },
+  "tortoise-beacon" : {
+    "tortoise-beacon-kappa": 400000,
+    "tortoise-beacon-q": "1/3",
+    "tortoise-beacon-rounds-number": 300,
+    "tortoise-beacon-grace-period-duration-ms": 120000,
+    "tortoise-beacon-proposal-duration-ms": 120000,
+    "tortoise-beacon-first-voting-round-duration-ms": 3600000,
+    "tortoise-beacon-voting-round-duration-ms": 1800000,
+    "tortoise-beacon-weak-coin-round-duration-ms": 60000,
+    "tortoise-beacon-theta": 0.25,
+    "tortoise-beacon-votes-limit": 100,
+    "tortoise-beacon-wait-after-epoch-start-ms": 10000
   }
 }
