--- a/artifacts/devnet/miner/config.json
+++ b/artifacts/devnet/miner/config.json
@@ -10,7 +10,7 @@
     "hare-exp-leaders": "10",
     "hare-limit-concurrent": "5",
     "hare-limit-iterations": "10",
-    "hare-round-duration-sec": "30", 
+    "hare-round-duration-sec": "30",
     "hare-wakeup-delta": "30",
     "hare-committee-size": "800",
     "hare-max-adversaries": "399"
@@ -62,9 +62,9 @@
     "buffer-size": 10000,
     "msg-size-limit": 0,
     "swarm": {
-        "bucketsize": 20,
-        "alpha": 3,
-        "randcon": 8
+      "bucketsize": 20,
+      "alpha": 3,
+      "randcon": 8
     },
     "network-id": 20
   },
@@ -83,18 +83,18 @@
     "refresh-ntp-interval": "30m"
   },
   "tortoise-beacon": {
-		"tortoise-beacon-first-voting-round-duration-ms": 60000,
-		"tortoise-beacon-grace-period-duration-ms": 10000,
-		"tortoise-beacon-kappa": 400000,
-		"tortoise-beacon-proposal-duration-ms": 30000,
-		"tortoise-beacon-q": "1/3",
-		"tortoise-beacon-rounds-number": 6,
-		"tortoise-beacon-theta": 0.00004,
-		"tortoise-beacon-votes-limit": 100,
-		"tortoise-beacon-voting-round-duration-ms": 50000,
-		"tortoise-beacon-wait-after-epoch-start-ms": 1000,
-		"tortoise-beacon-weak-coin-round-duration-ms": 1000
-	},
+    "tortoise-beacon-first-voting-round-duration-ms": 60000,
+    "tortoise-beacon-grace-period-duration-ms": 10000,
+    "tortoise-beacon-kappa": 400000,
+    "tortoise-beacon-proposal-duration-ms": 30000,
+    "tortoise-beacon-q": "1/3",
+    "tortoise-beacon-rounds-number": 6,
+    "tortoise-beacon-theta": 0.00004,
+    "tortoise-beacon-votes-limit": 100,
+    "tortoise-beacon-voting-round-duration-ms": 50000,
+    "tortoise-beacon-wait-after-epoch-start-ms": 1000,
+    "tortoise-beacon-weak-coin-round-duration-ms": 1000
+  },
   "smeshing": {
     "smeshing-start": true,
     "smeshing-coinbase": "1",
@@ -104,6 +104,15 @@
       "smeshing-opts-numfiles": 1,
       "smeshing-opts-provider": 1,
       "smeshing-opts-throttle": true
+    }
+  },
+  "genesis": {
+    "accounts": {
+      "0xff083c9a22e05d3459b03f3dbed61c7ad6e0a209": 100000000000000000,
+      "0xb20c3a31f973231e01bf2d6b5c00a22cc13b5c63": 100000000000000000,
+      "0x8868600d2835019249a0f756f754d5a5ab17ebf0": 100000000000000000,
+      "0x9f120e40e330affe6aa27d5bda49ac0960df7d6f": 100000000000000000,
+      "0xafed9a1c17ca7eaa7a6795dbc7bee1b1d992c7ba": 100000000000000000
     }
   }
 }
