--- a/artifacts/testnet/miner/config.json
+++ b/artifacts/testnet/miner/config.json
@@ -1,87 +1,96 @@
 {
   "main": {
-      "layer-duration-sec": 300,
-      "layer-average-size": 50,
-      "layers-per-epoch": 288,
-      "block-cache-size": 20,
-      "sync-request-timeout": 10000,
-      "sync-interval": 10,
-      "sync-validation-delta": 30,
-      "hdist": 10,
-      "atxs-per-block": 25,
-      "start-mining": true
+    "layer-duration-sec": 300,
+    "layer-average-size": 50,
+    "layers-per-epoch": 288,
+    "block-cache-size": 20,
+    "sync-request-timeout": 10000,
+    "sync-interval": 10,
+    "sync-validation-delta": 30,
+    "hdist": 10,
+    "atxs-per-block": 25,
+    "start-mining": true
   },
   "p2p": {
-      "dial-timeout": "1m",
-      "conn-keepalive": "48h",
-      "response-timeout": "10s",
-      "session-timeout": "15s",
-      "max-pending-connections": 100,
-      "outbound-target": 10,
-      "max-inbound": 32,
-      "buffer-size": 10000,
-      "msg-size-limit": 0,
-      "swarm": {
-          "bucketsize": 20,
-          "alpha": 3,
-          "randcon": 8
-      },
-      "network-id": 32
+    "dial-timeout": "1m",
+    "conn-keepalive": "48h",
+    "response-timeout": "10s",
+    "session-timeout": "15s",
+    "max-pending-connections": 100,
+    "outbound-target": 10,
+    "max-inbound": 32,
+    "buffer-size": 10000,
+    "msg-size-limit": 0,
+    "swarm": {
+      "bucketsize": 20,
+      "alpha": 3,
+      "randcon": 8
+    },
+    "network-id": 32
   },
   "post": {
-      "post-space": 4294967296,
-      "post-labels": 50,
-      "post-datadir": "/root/data/post"
+    "post-space": 4294967296,
+    "post-labels": 50,
+    "post-datadir": "/root/data/post"
   },
   "reward": {
-      "base-reward": {
-          "abs": 50000000000000
-      }
+    "base-reward": {
+      "abs": 50000000000000
+    }
   },
   "hare": {
-      "hare-committee-size": 50,
-      "hare-max-adversaries": 24,
-      "hare-round-duration-sec": 30,
-      "hare-wakeup-delta": 30,
-      "hare-exp-leaders": 5,
-      "hare-limit-iterations": 2,
-      "hare-limit-concurrent": 5
+    "hare-committee-size": 50,
+    "hare-max-adversaries": 24,
+    "hare-round-duration-sec": 30,
+    "hare-wakeup-delta": 30,
+    "hare-exp-leaders": 5,
+    "hare-limit-iterations": 2,
+    "hare-limit-concurrent": 5
   },
   "hare-eligibility": {
-      "eligibility-confidence-param": 100,
-      "eligibility-epoch-offset": 0
+    "eligibility-confidence-param": 100,
+    "eligibility-epoch-offset": 0
   },
   "time": {
-      "max-allowed-time-drift": "10s",
-      "ntp-queries": 5,
-      "default-timeout-latency": "10s",
-      "refresh-ntp-interval": "30m"
+    "max-allowed-time-drift": "10s",
+    "ntp-queries": 5,
+    "default-timeout-latency": "10s",
+    "refresh-ntp-interval": "30m"
   },
   "api": {
-      "grpc": "node,mesh,globalstate,transaction,smesher,debug"
+    "grpc": "node,mesh,globalstate,transaction,smesher,debug"
   },
   "logging": {
-      "app": "info",
-      "p2p": "debug",
-      "post": "info",
-      "stateDb": "info",
-      "state": "info",
-      "atxDb": "info",
-      "poetDb": "info",
-      "store": "info",
-      "meshDb": "info",
-      "trtl": "info",
-      "block-eligibility": "info",
-      "mesh": "info",
-      "sync": "info",
-      "block-oracle": "info",
-      "hare-oracle": "info",
-      "hare": "info",
-      "block-builder": "info",
-      "block-listener": "info",
-      "poet": "info",
-      "nipst": "info",
-      "atx-builder": "info",
-      "hare-beacon": "info"
+    "app": "info",
+    "p2p": "debug",
+    "post": "info",
+    "stateDb": "info",
+    "state": "info",
+    "atxDb": "info",
+    "poetDb": "info",
+    "store": "info",
+    "meshDb": "info",
+    "trtl": "info",
+    "block-eligibility": "info",
+    "mesh": "info",
+    "sync": "info",
+    "block-oracle": "info",
+    "hare-oracle": "info",
+    "hare": "info",
+    "block-builder": "info",
+    "block-listener": "info",
+    "poet": "info",
+    "nipst": "info",
+    "atx-builder": "info",
+    "hare-beacon": "info"
+  },
+  "genesis": {
+    "accounts": {
+      "0xff083c9a22e05d3459b03f3dbed61c7ad6e0a209": 100000000000000000,
+      "0xb20c3a31f973231e01bf2d6b5c00a22cc13b5c63": 100000000000000000,
+      "0x8868600d2835019249a0f756f754d5a5ab17ebf0": 100000000000000000,
+      "0x9f120e40e330affe6aa27d5bda49ac0960df7d6f": 100000000000000000,
+      "0xafed9a1c17ca7eaa7a6795dbc7bee1b1d992c7ba": 100000000000000000
+    }
   }
 }
