--- a/artifacts/mininet/miner/config.json
+++ b/artifacts/mininet/miner/config.json
@@ -1,19 +1,19 @@
 {
   "api": {
-    "grpc": "gateway,node,mesh,globalstate,transaction,smesher,debug"
+    "grpc": "gateway,node,mesh,globalstate,transaction,smesher"
   },
   "hare-eligibility": {
     "eligibility-confidence-param": "25",
     "eligibility-epoch-offset": "0"
   },
   "hare": {
-    "hare-exp-leaders": "5",
+    "hare-exp-leaders": "10",
     "hare-limit-concurrent": "5",
     "hare-limit-iterations": "10",
-    "hare-round-duration-sec": "30", 
+    "hare-round-duration-sec": "30",
     "hare-wakeup-delta": "30",
-    "hare-committee-size": "6",
-    "hare-max-adversaries": "2"
+    "hare-committee-size": "800",
+    "hare-max-adversaries": "399"
   },
   "logging": {
     "app": "info",
@@ -40,6 +40,7 @@
     "trtl": "info"
   },
   "main": {
+    "space-to-commit": 1048576,
     "layer-duration-sec": 200,
     "layer-average-size": 30,
     "layers-per-epoch": 6,
@@ -49,7 +50,7 @@
     "sync-validation-delta": 30,
     "hdist": 10,
     "atxs-per-block": 25,
-    "start-mining": true
+    "tortoise-rerun-interval": 525600
   },
   "p2p": {
     "dial-timeout": "1m",
@@ -62,21 +63,57 @@
     "buffer-size": 10000,
     "msg-size-limit": 0,
     "swarm": {
-        "bucketsize": 20,
-        "alpha": 3,
-        "randcon": 1
+      "bucketsize": 20,
+      "alpha": 3,
+      "randcon": 8
     },
-    "network-id": 20
+    "network-id": 203
   },
   "post": {
-    "post-space": 1048576,
-    "post-labels": 10,
-    "post-datadir": "/root/data/post"
+    "post-bits-per-label": 8,
+    "post-labels-per-unit": 1024,
+    "post-min-numunits": 2,
+    "post-max-numunits": 4,
+    "post-k1": 2000,
+    "post-k2": 1800
   },
   "time": {
     "max-allowed-time-drift": "10s",
     "ntp-queries": 5,
     "default-timeout-latency": "10s",
     "refresh-ntp-interval": "30m"
+  },
+  "tortoise-beacon": {
+    "tortoise-beacon-first-voting-round-duration": "60s",
+    "tortoise-beacon-grace-period-duration": "10s",
+    "tortoise-beacon-kappa": 400000,
+    "tortoise-beacon-proposal-duration": "30s",
+    "tortoise-beacon-q": "1/3",
+    "tortoise-beacon-rounds-number": 6,
+    "tortoise-beacon-theta": "1/25000",
+    "tortoise-beacon-votes-limit": 100,
+    "tortoise-beacon-voting-round-duration": "50s",
+    "tortoise-beacon-wait-after-epoch-start": "50s",
+    "tortoise-beacon-weak-coin-round-duration": "10s"
+  },
+  "smeshing": {
+    "smeshing-start": true,
+    "smeshing-coinbase": "1",
+    "smeshing-opts": {
+      "smeshing-opts-datadir": "/root/data/post",
+      "smeshing-opts-numunits": 2,
+      "smeshing-opts-numfiles": 1,
+      "smeshing-opts-provider": 1,
+      "smeshing-opts-throttle": true
+    }
+  },
+  "genesis": {
+    "accounts": {
+      "0xff083c9a22e05d3459b03f3dbed61c7ad6e0a209": 100000000000000000,
+      "0xb20c3a31f973231e01bf2d6b5c00a22cc13b5c63": 100000000000000000,
+      "0x8868600d2835019249a0f756f754d5a5ab17ebf0": 100000000000000000,
+      "0x9f120e40e330affe6aa27d5bda49ac0960df7d6f": 100000000000000000,
+      "0xafed9a1c17ca7eaa7a6795dbc7bee1b1d992c7ba": 100000000000000000
+    }
   }
 }
