--- a/artifacts/devnet/config.json
+++ b/artifacts/devnet/config.json
@@ -27,7 +27,7 @@
   "pyroscope-cpu": "2",
   "pyroscope-memory": "8",
   "metrics": true,
-  "go-sm-image": "spacemeshos/go-spacemesh:v0.2.0-rc4",
+  "go-sm-image": "spacemeshos/go-spacemesh-dev:03a90cc",
   "poet-image": "spacemeshos/poet:develop",
   "enable-go-debug": true,
   "prometheus-memory": "2",
