--- a/artifacts/devnet/miner/config.json
+++ b/artifacts/devnet/miner/config.json
@@ -84,7 +84,7 @@
     "refresh-ntp-interval": "30m"
   },
   "tortoise-beacon": {
-    "tortoise-beacon-first-voting-round-duration": "180s",
+    "tortoise-beacon-first-voting-round-duration": "3m",
     "tortoise-beacon-grace-period-duration": "10s",
     "tortoise-beacon-kappa": 40,
     "tortoise-beacon-proposal-duration": "30s",
