--- a/artifacts/mininet/miner/config.json
+++ b/artifacts/mininet/miner/config.json
@@ -1,6 +1,6 @@
 {
   "api": {
-    "grpc": "gateway,node,mesh,globalstate,transaction,smesher"
+    "grpc": "debug,gateway,node,mesh,globalstate,transaction,smesher"
   },
   "hare-eligibility": {
     "eligibility-confidence-param": "25",
