--- a/artifacts/devnet/config.json
+++ b/artifacts/devnet/config.json
@@ -27,7 +27,7 @@
   "pyroscope-cpu": "2",
   "pyroscope-memory": "8",
   "metrics": true,
-  "go-sm-image": "spacemeshos/go-spacemesh-dev:a3dffb3",
+  "go-sm-image": "spacemeshos/go-spacemesh-dev:develop",
   "poet-image": "spacemeshos/poet:develop",
   "enable-go-debug": true,
   "prometheus-memory": "2",
