--- a/artifacts/devnet/miner/config.json
+++ b/artifacts/devnet/miner/config.json
@@ -93,7 +93,8 @@
     "tortoise-beacon-theta": "1/4",
     "tortoise-beacon-votes-limit": 100,
     "tortoise-beacon-voting-round-duration": "50s",
-    "tortoise-beacon-weak-coin-round-duration": "10s"
+    "tortoise-beacon-weak-coin-round-duration": "10s",
+    "tortoise-beacon-sync-num-blocks": "30"
   },
   "smeshing": {
     "smeshing-start": true,
