Update parameters for devnet
- rerun tortoise from scratch every hour
- reduce number of blocks that we keep before verified layer
  as discussed in research this window is only relevant for self-healing
  but we are taking different approach
- reduce target-outbound from 20 to 10
  that was unnecessary change

--- a/artifacts/devnet/miner/config.json
+++ b/artifacts/devnet/miner/config.json
@@ -50,11 +50,12 @@
     "sync-validation-delta": 30,
     "hdist": 10,
     "atxs-per-block": 25,
-    "tortoise-rerun-interval": 525600
+    "tortoise-window-size": 30,
+    "tortoise-rerun-interval": 60
   },
   "p2p": {
     "network-id": 777,
-    "target-outbound": 20
+    "target-outbound": 10
   },
   "post": {
     "post-bits-per-label": 8,
