config: set verification window to a 100/10 for verifying and full tortoise (#23)
* config: remove tortoise section from devnet config

* set verification window low for the next network

--- a/artifacts/devnet/miner/config.json
+++ b/artifacts/devnet/miner/config.json
@@ -56,8 +56,8 @@
     "target-outbound": 10
   },
   "tortoise": {
-    "tortoise-window-size": 30,
-    "tortoise-rerun-interval": 60
+    "full-mode-verification-window": 10,
+    "verifying-mode-verification-window": 100
   },
   "post": {
     "post-bits-per-label": 8,
