--- a/artifacts/devnet/miner/config.json
+++ b/artifacts/devnet/miner/config.json
@@ -2,18 +2,27 @@
   "api": {
     "grpc": "gateway,node,mesh,globalstate,transaction,smesher,debug"
   },
-  "hare-eligibility": {
-    "eligibility-confidence-param": "25",
-    "eligibility-epoch-offset": "0"
+  "genesis": {
+    "accounts": {
+      "0x8868600d2835019249a0f756f754d5a5ab17ebf0": 100000000000000000,
+      "0x9f120e40e330affe6aa27d5bda49ac0960df7d6f": 100000000000000000,
+      "0xafed9a1c17ca7eaa7a6795dbc7bee1b1d992c7ba": 100000000000000000,
+      "0xb20c3a31f973231e01bf2d6b5c00a22cc13b5c63": 100000000000000000,
+      "0xff083c9a22e05d3459b03f3dbed61c7ad6e0a209": 100000000000000000
+    }
   },
   "hare": {
+    "hare-committee-size": "800",
     "hare-exp-leaders": "10",
     "hare-limit-concurrent": "5",
     "hare-limit-iterations": "10",
+    "hare-max-adversaries": "399",
     "hare-round-duration-sec": "30",
-    "hare-wakeup-delta": "30",
-    "hare-committee-size": "800",
-    "hare-max-adversaries": "399"
+    "hare-wakeup-delta": "30"
+  },
+  "hare-eligibility": {
+    "eligibility-confidence-param": "25",
+    "eligibility-epoch-offset": "0"
   },
   "logging": {
     "app": "info",
@@ -40,38 +49,49 @@
     "trtl": "info"
   },
   "main": {
-    "space-to-commit": 1048576,
-    "layer-duration-sec": 200,
-    "layer-average-size": 50,
-    "layers-per-epoch": 6,
+    "atxs-per-block": 25,
     "block-cache-size": 20,
-    "sync-request-timeout": 60000,
-    "sync-interval": 10,
-    "sync-validation-delta": 30,
     "hdist": 10,
-    "atxs-per-block": 25
+    "layer-average-size": 30,
+    "layer-duration-sec": 200,
+    "layers-per-epoch": 6,
+    "space-to-commit": 1048576,
+    "sync-interval": 10,
+    "sync-request-timeout": 60000,
+    "sync-validation-delta": 30
   },
   "p2p": {
-    "network-id": 213,
+    "network-id": 214,
     "target-outbound": 10
-  },
-  "tortoise": {
-    "full-mode-verification-window": 10,
-    "verifying-mode-verification-window": 100
   },
   "post": {
     "post-bits-per-label": 8,
-    "post-labels-per-unit": 1024,
-    "post-min-numunits": 2,
-    "post-max-numunits": 4,
     "post-k1": 2000,
-    "post-k2": 1800
+    "post-k2": 1800,
+    "post-labels-per-unit": 1024,
+    "post-max-numunits": 4,
+    "post-min-numunits": 2
+  },
+  "smeshing": {
+    "smeshing-coinbase": "1",
+    "smeshing-opts": {
+      "smeshing-opts-datadir": "./",
+      "smeshing-opts-numfiles": 1,
+      "smeshing-opts-numunits": 2,
+      "smeshing-opts-provider": 1,
+      "smeshing-opts-throttle": true
+    },
+    "smeshing-start": false
   },
   "time": {
+    "default-timeout-latency": "10s",
     "max-allowed-time-drift": "10s",
     "ntp-queries": 5,
-    "default-timeout-latency": "10s",
     "refresh-ntp-interval": "30m"
+  },
+  "tortoise": {
+    "tortoise-rerun-interval": "60m",
+    "tortoise-window-size": 30
   },
   "tortoise-beacon": {
     "tortoise-beacon-first-voting-round-duration": "3m",
@@ -80,30 +100,10 @@
     "tortoise-beacon-proposal-duration": "30s",
     "tortoise-beacon-q": "1/3",
     "tortoise-beacon-rounds-number": 6,
+    "tortoise-beacon-sync-num-blocks": "30",
     "tortoise-beacon-theta": "1/4",
     "tortoise-beacon-votes-limit": 100,
     "tortoise-beacon-voting-round-duration": "50s",
-    "tortoise-beacon-weak-coin-round-duration": "10s",
-    "tortoise-beacon-sync-num-blocks": "30"
-  },
-  "smeshing": {
-    "smeshing-start": false,
-    "smeshing-coinbase": "1",
-    "smeshing-opts": {
-      "smeshing-opts-datadir": "./",
-      "smeshing-opts-numunits": 2,
-      "smeshing-opts-numfiles": 1,
-      "smeshing-opts-provider": 1,
-      "smeshing-opts-throttle": true
-    }
-  },
-  "genesis": {
-    "accounts": {
-      "0xff083c9a22e05d3459b03f3dbed61c7ad6e0a209": 100000000000000000,
-      "0xb20c3a31f973231e01bf2d6b5c00a22cc13b5c63": 100000000000000000,
-      "0x8868600d2835019249a0f756f754d5a5ab17ebf0": 100000000000000000,
-      "0x9f120e40e330affe6aa27d5bda49ac0960df7d6f": 100000000000000000,
-      "0xafed9a1c17ca7eaa7a6795dbc7bee1b1d992c7ba": 100000000000000000
-    }
+    "tortoise-beacon-weak-coin-round-duration": "10s"
   }
 }
