--- a/artifacts/devnet/miner/config.json
+++ b/artifacts/devnet/miner/config.json
@@ -89,17 +89,17 @@
     "ntp-queries": 5,
     "refresh-ntp-interval": "30m"
   },
-  "tortoise-beacon": {
-    "tortoise-beacon-first-voting-round-duration": "3m",
-    "tortoise-beacon-grace-period-duration": "10s",
-    "tortoise-beacon-kappa": 40,
-    "tortoise-beacon-proposal-duration": "30s",
-    "tortoise-beacon-q": "1/3",
-    "tortoise-beacon-rounds-number": 6,
-    "tortoise-beacon-sync-num-blocks": "30",
-    "tortoise-beacon-theta": "1/4",
-    "tortoise-beacon-votes-limit": 100,
-    "tortoise-beacon-voting-round-duration": "50s",
-    "tortoise-beacon-weak-coin-round-duration": "10s"
+  "beacon": {
+    "beacon-first-voting-round-duration": "3m",
+    "beacon-grace-period-duration": "10s",
+    "beacon-kappa": 40,
+    "beacon-proposal-duration": "30s",
+    "beacon-q": "1/3",
+    "beacon-rounds-number": 6,
+    "beacon-sync-num-blocks": "30",
+    "beacon-theta": "1/4",
+    "beacon-votes-limit": 100,
+    "beacon-voting-round-duration": "50s",
+    "beacon-weak-coin-round-duration": "10s"
   }
 }
