added chaos mesh

--- a/artifacts/devnet/config.json
+++ b/artifacts/devnet/config.json
@@ -32,5 +32,6 @@
   "enable-go-debug": true,
   "prometheus-memory": "2",
   "prometheus-cpu": "2",
-  "enable-slack-alerts": true
+  "enable-slack-alerts": true,
+  "chaos-mesh": true
 }
