--- a/artifacts/devnet/config.json
+++ b/artifacts/devnet/config.json
@@ -33,5 +33,6 @@
   "prometheus-memory": "2",
   "prometheus-cpu": "2",
   "enable-slack-alerts": true,
-  "chaos-mesh": true
+  "chaos-mesh": true,
+  "use-vpn": true
 }
