devnet226 and tweaks

--- a/artifacts/devnet/config.json
+++ b/artifacts/devnet/config.json
@@ -1,11 +1,11 @@
 {
-  "network-name": "devnet225",
+  "network-name": "devnet226",
   "miners": 50,
   "poets": 1,
-  "miner-ram": "4",
-  "miner-cpu": "2",
-  "poet-ram": "4",
-  "poet-cpu": "2",
+  "miner-ram": "1",
+  "miner-cpu": "100m",
+  "poet-ram": "2",
+  "poet-cpu": "100m",
   "miner-disk-size": "20",
   "poet-disk-size": "20",
   "gcp-machine-type": "e2-standard-16",
@@ -16,22 +16,22 @@
   "gcp-machine-cpu": 16,
   "gcp-machine-memory": 64,
   "genesis-delay": 10,
-  "es-disk-size": "1024",
-  "es-memory": "16",
-  "es-heap-memory": "4",
-  "es-cpu": "4",
-  "es-replicas": "3",
+  "es-disk-size": "512",
+  "es-memory": "8",
+  "es-heap-memory": "2",
+  "es-cpu": "2",
+  "es-replicas": "2",
   "es-master-nodes": "2",
   "logs-expiry": "7",
   "deploy-pyroscope": true,
-  "pyroscope-cpu": "2",
+  "pyroscope-cpu": "100m",
   "pyroscope-memory": "8",
   "metrics": true,
   "go-sm-image": "spacemeshos/go-spacemesh-dev:d298a63",
   "poet-image": "spacemeshos/poet:develop",
   "enable-go-debug": true,
-  "prometheus-memory": "2",
-  "prometheus-cpu": "2",
+  "prometheus-memory": "4",
+  "prometheus-cpu": "100m",
   "enable-slack-alerts": true,
   "chaos-mesh": true,
   "use-vpc": true
